--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next-auth": "^4.23.1",
     "react": "latest",
     "react-dom": "latest",
-    "vercel": "^32.3.1"
+    "vercel": "^32.3.1",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@types/node": "latest",
