--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-auth": "^4.23.1",
     "react": "latest",
     "react-dom": "latest",
+    "uuid": "^9.0.1",
     "vercel": "^32.3.1",
     "zod": "^3.22.2"
   },
