--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.3.1",
+    "dotenv": "^16.3.1",
     "next": "latest",
     "next-auth": "^4.23.1",
     "react": "latest",
     "react-dom": "latest",
+    "ts-node": "^10.9.1",
     "uuid": "^9.0.1",
     "vercel": "^32.3.1",
     "zod": "^3.22.2"
