--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "ts-node": "^10.9.1",
     "uuid": "^9.0.1",
     "vercel": "^32.3.1",
-    "zod": "^3.22.2"
+    "zod": "^3.22.2",
+    "zod-error": "^1.5.0"
   },
   "devDependencies": {
     "@types/node": "latest",
