--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "uuid": "^9.0.1",
     "vercel": "^32.3.1",
     "zod": "^3.22.2",
-    "zod-error": "^1.5.0"
+    "zod-error": "^1.5.0",
+    "zod-validation-error": "^1.5.0"
   },
   "devDependencies": {
     "@types/node": "latest",
