--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vercel": "^32.3.1",
     "zod": "^3.22.2",
     "zod-error": "^1.5.0",
+    "zod-prisma-types": "^2.7.9",
     "zod-validation-error": "^1.5.0"
   },
   "devDependencies": {
