--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-auth": "^4.23.1",
     "react": "latest",
     "react-dom": "latest",
+    "react-hook-form": "^7.47.0",
     "ts-node": "^10.9.1",
     "uuid": "^9.0.1",
     "vercel": "^32.3.1",
