--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.3.1",
     "dotenv": "^16.3.1",
@@ -20,7 +21,7 @@
     "ts-node": "^10.9.1",
     "uuid": "^9.0.1",
     "vercel": "^32.3.1",
-    "zod": "^3.22.2",
+    "zod": "^3.22.4",
     "zod-error": "^1.5.0",
     "zod-prisma-types": "^2.7.9",
     "zod-validation-error": "^1.5.0"
