--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.47.0",
+    "react-hot-toast": "^2.4.1",
     "ts-node": "^10.9.1",
     "uuid": "^9.0.1",
     "vercel": "^32.3.1",
